TEST_PROGRAMS/INVALID/frederic_lafrance/3.min
# Can't interleave complex statements

if x then
  while y do
endif
  done
